test/modules/use/parentSymRequiresUse.good
parentSymRequiresUse.chpl:3: In module 'N':
parentSymRequiresUse.chpl:4: error: 'xyz' undeclared (first use this function)
