test/modules/use/parentSymRequiresUse.chpl
module M {
  var xyz = 42;
  module N {
    writeln(xyz);
    proc main() {
    }
  }
}
